<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.p2po2p.tcpdump.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/work_tip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="指定ip   " />

        <EditText
            android:id="@+id/editText_ip"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/ip_tip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="指定端口" />

        <EditText
            android:id="@+id/editText_port"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/port_tip"
            android:inputType="number" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView_capture_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:text="保存路径： /sccard/Android/com.p2op2p.tcpdump/files/" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="全部报文" />

        <CheckBox
            android:id="@+id/checkBox_capture_any"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/alarm_push_checkbox_selector"
            android:button="@null" />

        <Button
            android:id="@+id/export_capture_any"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="capture_any"
            android:text="@string/export_capture" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="回环报文" />

        <CheckBox
            android:id="@+id/checkBox_capture_lo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/alarm_push_checkbox_selector"
            android:button="@null" />

        <Button
            android:id="@+id/export_capture_lo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="capture_lo"
            android:text="导出回环" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="全部日志" />

        <CheckBox
            android:id="@+id/checkBox_logcat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/alarm_push_checkbox_selector"
            android:button="@null" />

        <Button
            android:id="@+id/export_logcat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="logcat"
            android:text="@string/export_logcat" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">


        <Button
            android:id="@+id/export_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="all"
            android:text="@string/export_all" />
    </LinearLayout>


</LinearLayout>
